# amanda-IA

./: .gitignore  AIA.md  CHANGELOG.md  README.md  html_original_debug_2.html  pyproject.toml
.aia/: mcp.json  settings.json
amanda_ia/: __init__.py  agent.py  agent_api.py  agilidad_hooks.py  aia.py  aia_avatar.py  classifier.py  classifier_cache.py  cli.py  config.py  daemon.py  feedback.py  history.py  live_monitor.py  mcp_client.py  memory_hooks.py  models.py  plan_cache.py  web_server.py
amanda_ia/resources/: banner.txt  banner_airbnb.txt  banner_dev.txt  banner_h2o.txt  banner_wh40k.txt
amanda_ia/services/: ai_models.py  html_extractor.py  mqtt_commander_svc.py  wahapedia_svc.py
amanda_ia/static/: avatar.html  avatar_speak.html  index.html
amanda_ia/templates/: home.html
amanda_ia/tools/: __init__.py  builtin.py  registry.py
mcp/: README.md  SPEC_TEMPERATURA.md
resources/: html_original_debug.html  log_cfg.yaml  versioning_prompt.md
resources/docs/: README.md  api_examples.md  quick_test.sh  test_api.sh
resources/wh40k/: wahapedia.css  wh40k_tokens.txt
scripts/: capture_readme_responses.py  test_mouse_ssh.py
specs/: benchmark-m1pro-vs-m4.md  dpo-reentrenamiento.md  testing-ssh.md
tests/: conftest.py  profiling_config.py  profiling_runner.py  similitud_coseno.py  test_agent_mcp.py  test_ai_models.py  test_aia_functions.py  test_amanda_ia.py  test_builtin.py  test_classifier.py  test_classifier_cache.py  test_config.py  test_datasets.py  test_functions.py  test_html_extractor.py  test_mqtt_commander_svc.py  test_pipeline.py  test_prompt.py  test_prompts_readme.py  test_registry.py  test_report_generator.py  test_tool.py  test_wahapedia_svc.py  tools.py
tests/olds/: pair_classification.py  test_aia_functions.py  tools.py  (+5 more)
(+1 files in other folders)
